# fandommm

./: README.md
.github/workflows/: build-image.yml
axum/: Cargo.toml  README.md
axum/docker/: Dockerfile
axum/src/: main.rs
jupyter/: README.md  sportwarz.py
react_interactive/: README.md  package.json
react_interactive/react_core/: package.json
react_interactive/react_core/public/: counties_4326.geojson  teams_MLB.json  teams_MLS.json  teams_NBA.json  teams_NFL.json  teams_NHL.json
react_interactive/react_core/src/: App.tsx  CalculationsComparision.tsx  MapController.tsx  Structs.tsx  index.css
react_interactive/tauri/: package.json  vite.config.ts
react_interactive/tauri/src/: main.tsx
react_interactive/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
react_interactive/tauri/src-tauri/src/: lib.rs
react_interactive/web/: .env  .gitignore  index.html  package.json  vite.config.ts
react_interactive/web/src/: main.tsx
rust_lambda/: README.md
