[package]
name = "hello-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
serde = "1.0.228"
serde_json = "1.0.149"
rust_calc = { version = "0.1.0", path = "../rust_calc" }
flate2 = "1.1.9"
